--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3065,7 +3065,7 @@ button:disabled,
 }
 
 .main.style2 {
-  padding: 3em 0 2em 0; /* keep existing padding */
+  padding: 3em 2em; /* keep existing padding */
   background-image: linear-gradient(180deg, #c3b59f 0%, #5b4f40 100%);
   color: rgba(255, 255, 255, 0.75);
   background-attachment: fixed;
